style: css reset 및 header 디자인 완성

--- a/week1/velog.html
+++ b/week1/velog.html
@@ -1,32 +1,42 @@
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NamjunLog</title>
     <link rel="stylesheet" href="/week1/velog.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <header>
-        <h1>NamjunLog</h1>
-        <div class="">
-            <div class="search_icon">검색</div>
-            <div class="write_article">로고</div>
-            <div class="profile-image">
-                <img src="" alt="프로필">
-                <div class="">더보기로고</div>
+        <h2 class="header_title">NamjunLog</h2>
+        <div class="header_menu">
+            <button type='button' class="search_icon">
+                <span class="material-symbols-outlined">
+                    search
+                    </span>
+            </button>
+            <button type="button" class="write_article-button">새 글 작성</button>
+            <div class="profile_image-section">
+                <div class="profile_icon">김</div>
+                <button class="expand-button">
+                    <span class="material-symbols-outlined">
+                        expand_more
+                    </span>
+                </button>
             </div>
         </div>
-
     </header>
     <nav>
-        <div class="nav_trending_topic">트렌딩</div>
-        <div class="nav_new_topic">최신</div>
-        <div class="period_setting-modal">이번주</div>
-        <div class="setting">더보기</div>
+        <div class="nav_right-section">
+            <button class="nav_trending_topic">트렌딩</button>
+            <button class="nav_new_topic">최신</button>
+            <button class="period_setting-modal">이번주</button>
+        </div>
+        <button class="setting">더보기</button>
     </nav>
     <main>
-        <div class="article">
+        <div class="article_card">
             <div class="thumbnail_container">
                 <img class='thumbnail_img' src="" alt="썸네일">
             </div>
