style: 메인섹션 디자인 완성

--- a/week1/velog.html
+++ b/week1/velog.html
@@ -21,8 +21,8 @@
             </button>
             <button type="button" class="write_article-button">새 글 작성</button>
             <div class="profile_image-section">
-                <div class="profile_icon">김</div>
-                <button class="expand-button">
+                <button type='button' class="profile_icon">김</ㅠ>
+                <button type='button' class="expand-button">
                     <span class="material-symbols-outlined">
                         expand_more
                     </span>
@@ -58,25 +58,206 @@
         </button>
     </nav>
     <main>
-        <div class="article_card">
-            <div class="thumbnail_container">
-                <img class='thumbnail_img' src="" alt="썸네일">
+        <section>
+            <div class="article_card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
+                <div class="content_container">
+                    <h2 class="article_title">웹파트 화이팅!</h2>
+                    <p class="article_content">
+                        아좌좌</br>아좌좌</br>화이팅합시다
+                    </p>
+                    <small class="article_info">4일 전 1개의 댓글</small>
+                </div>
+                <div class="content_footer">
+                    <div class="publisher_profile">
+                        <div class="publisher_photo">K</div>
+                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                    </div>
+                    <div class="article_likes">
+                        <span class="material-symbols-outlined">
+                            favorite
+                        </span>
+                        <p class="like">101</p>
+                    </div>
+                </div>
             </div>
-            <div class="content_container">
-                <h2 class="article_title">인솝트</h2>
-                <p class="article_content">
-                    3줄이야</br>3줄이야</br>3줄이야
-                </p>
-                <small>4일 전 1개의 댓글</small>
+            <div class="article_card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
+                <div class="content_container">
+                    <h2 class="article_title">웹파트 화이팅!</h2>
+                    <p class="article_content">
+                        아좌좌</br>아좌좌</br>화이팅합시다
+                    </p>
+                    <small class="article_info">4일 전 1개의 댓글</small>
+                </div>
+                <div class="content_footer">
+                    <div class="publisher_profile">
+                        <div class="publisher_photo">K</div>
+                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                    </div>
+                    <div class="article_likes">
+                        <span class="material-symbols-outlined">
+                            favorite
+                        </span>
+                        <p class="like">101</p>
+                    </div>
+                </div>
             </div>
-            <div class="publisher_info-container">
-                <img class='publisher_profile-logo'src="" alt="작성자">
-                <p class="publisher_name">by SNUPI</p>
-                <p class="publisher_liek">101</p>
+            <div class="article_card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
+                <div class="content_container">
+                    <h2 class="article_title">웹파트 화이팅!</h2>
+                    <p class="article_content">
+                        아좌좌</br>아좌좌</br>화이팅합시다
+                    </p>
+                    <small class="article_info">4일 전 1개의 댓글</small>
+                </div>
+                <div class="content_footer">
+                    <div class="publisher_profile">
+                        <div class="publisher_photo">K</div>
+                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                    </div>
+                    <div class="article_likes">
+                        <span class="material-symbols-outlined">
+                            favorite
+                        </span>
+                        <p class="like">101</p>
+                    </div>
+                </div>
             </div>
-
-
-        </div>
+            <div class="article_card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
+                <div class="content_container">
+                    <h2 class="article_title">웹파트 화이팅!</h2>
+                    <p class="article_content">
+                        아좌좌</br>아좌좌</br>화이팅합시다
+                    </p>
+                    <small class="article_info">4일 전 1개의 댓글</small>
+                </div>
+                <div class="content_footer">
+                    <div class="publisher_profile">
+                        <div class="publisher_photo">K</div>
+                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                    </div>
+                    <div class="article_likes">
+                        <span class="material-symbols-outlined">
+                            favorite
+                        </span>
+                        <p class="like">101</p>
+                    </div>
+                </div>
+            </div>
+            <div class="article_card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
+                <div class="content_container">
+                    <h2 class="article_title">웹파트 화이팅!</h2>
+                    <p class="article_content">
+                        아좌좌</br>아좌좌</br>화이팅합시다
+                    </p>
+                    <small class="article_info">4일 전 1개의 댓글</small>
+                </div>
+                <div class="content_footer">
+                    <div class="publisher_profile">
+                        <div class="publisher_photo">K</div>
+                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                    </div>
+                    <div class="article_likes">
+                        <span class="material-symbols-outlined">
+                            favorite
+                        </span>
+                        <p class="like">101</p>
+                    </div>
+                </div>
+            </div>
+            <div class="article_card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
+                <div class="content_container">
+                    <h2 class="article_title">웹파트 화이팅!</h2>
+                    <p class="article_content">
+                        아좌좌</br>아좌좌</br>화이팅합시다
+                    </p>
+                    <small class="article_info">4일 전 1개의 댓글</small>
+                </div>
+                <div class="content_footer">
+                    <div class="publisher_profile">
+                        <div class="publisher_photo">K</div>
+                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                    </div>
+                    <div class="article_likes">
+                        <span class="material-symbols-outlined">
+                            favorite
+                        </span>
+                        <p class="like">101</p>
+                    </div>
+                </div>
+            </div>
+            <div class="article_card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
+                <div class="content_container">
+                    <h2 class="article_title">웹파트 화이팅!</h2>
+                    <p class="article_content">
+                        아좌좌</br>아좌좌</br>화이팅합시다
+                    </p>
+                    <small class="article_info">4일 전 1개의 댓글</small>
+                </div>
+                <div class="content_footer">
+                    <div class="publisher_profile">
+                        <div class="publisher_photo">K</div>
+                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                    </div>
+                    <div class="article_likes">
+                        <span class="material-symbols-outlined">
+                            favorite
+                        </span>
+                        <p class="like">101</p>
+                    </div>
+                </div>
+            </div>
+            <div class="article_card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
+                <div class="content_container">
+                    <h2 class="article_title">웹파트 화이팅!</h2>
+                    <p class="article_content">
+                        아좌좌</br>아좌좌</br>화이팅합시다
+                    </p>
+                    <small class="article_info">4일 전 1개의 댓글</small>
+                </div>
+                <div class="content_footer">
+                    <div class="publisher_profile">
+                        <div class="publisher_photo">K</div>
+                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                    </div>
+                    <div class="article_likes">
+                        <span class="material-symbols-outlined">
+                            favorite
+                        </span>
+                        <p class="like">101</p>
+                    </div>
+                </div>
+            </div>
+            <div class="article_card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
+                <div class="content_container">
+                    <h2 class="article_title">웹파트 화이팅!</h2>
+                    <p class="article_content">
+                        아좌좌</br>아좌좌</br>화이팅합시다
+                    </p>
+                    <small class="article_info">4일 전 1개의 댓글</small>
+                </div>
+                <div class="content_footer">
+                    <div class="publisher_profile">
+                        <div class="publisher_photo">K</div>
+                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                    </div>
+                    <div class="article_likes">
+                        <span class="material-symbols-outlined">
+                            favorite
+                        </span>
+                        <p class="like">101</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
