style: media query 반응형 적용

--- a/week1/velog.html
+++ b/week1/velog.html
@@ -240,7 +240,7 @@
                 <div class="content_container">
                     <h2 class="article_title">웹파트 화이팅!</h2>
                     <p class="article_content">
-                        아좌좌</br>아좌좌</br>화이팅합시다
+                        아좌좌</br>아좌좌</br>
                     </p>
                     <small class="article_info">4일 전 1개의 댓글</small>
                 </div>
