style: 일부 button 요소에 누락된 타입 추가

--- a/week1/velog.html
+++ b/week1/velog.html
@@ -32,26 +32,26 @@
     </header>
     <nav>
         <div class="nav_left-menu">
-            <button class="nav_button nav_trending_topic">
+            <button type='button' class="nav_button nav_trending_topic">
                 <span class="material-symbols-outlined">
                     trending_up
                 </span>
                 <p>트렌딩</p>
             </button>
-            <button class="nav_button nav_new_topic">
+            <button type='button' class="nav_button nav_new_topic">
                 <span class="material-symbols-outlined" style="margin-bottom:0.3rem;">
                     schedule
                 </span>
                 <p>최신</p>
             </button>
-            <button class="nav_button period_setting">
+            <button type='button' class="nav_button period_setting">
                 <p>이번 주</p>
                 <span class="material-symbols-outlined">
                     expand_more
                 </span>
             </button>
         </div>
-        <button class="nav_expand-button">
+        <button  type='button' class="nav_expand-button">
             <span class="material-symbols-outlined">
                 more_vert
             </span>
