refector: Todolist.html에서 BEM 명명법에 맞지 않는 부분 코드 수정

--- a/week1/TodoList.html
+++ b/week1/TodoList.html
@@ -17,34 +17,34 @@
         <button type="button">함께 보기</button>
     </nav>
     <main>
-        <section>
+        <section class="left-section">
             <h2>오늘 할 일</h2>
-            <div class="todos_container">
+            <div class="todos__container">
             </div>
-            <div class="input_container">
+            <div class="input__container">
                 <input type="text" placeholder="계획을 추가해주세요">
-                <button type="button" class="item_add-button">
+                <button type="button" class="item-add__button">
                     <span class="material-symbols-outlined">
                         add
                     </span>
                 </button>
             </div>
         </section>
-        <section>
+        <section class="right-section">
             <h2>내일 할 일</h2>
-            <div class="todos_container">
-                <ul class="todo_list">
-                    <li class="todo_list-item">
-                        <p class="list_item-content">나무 게임 하기</p>
-                        <button type="button" class="item_delete-button">
+            <div class="todos__container">
+                <ul class="todo-list">
+                    <li class="todo-list__item">
+                        <p class="list-item__content">나무 게임 하기</p>
+                        <button type="button" class="item-delete__button">
                             <span class="material-symbols-outlined">
                                 delete
                             </span>
                         </button>
                     </li>
-                    <li class="todo_list-item">
-                        <p class="list_item-content">세미나 과제 하기</p>
-                        <button type="button" class="item_delete-button">
+                    <li class="todo-list__item">
+                        <p class="list-item__content">세미나 과제 하기</p>
+                        <button type="button" class="item-delete__button">
                             <span class="material-symbols-outlined">
                             delete
                             </span>
@@ -52,9 +52,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="input_container">
+            <div class="input__container">
                 <input type="text" placeholder="계획을 추가해주세요">
-                <button type="button" class="item_add-button">
+                <button type="button" class="item-add__button">
                     <span class="material-symbols-outlined">
                         add
                     </span>
